@@ -501,6 +501,7 @@ typedef enum libspectrum_tape_type {
   LIBSPECTRUM_TAPE_BLOCK_SELECT = 0x28,
 
   LIBSPECTRUM_TAPE_BLOCK_STOP48 = 0x2a,
+  LIBSPECTRUM_TAPE_BLOCK_SET_SIGNAL_LEVEL,
 
   LIBSPECTRUM_TAPE_BLOCK_COMMENT = 0x30,
   LIBSPECTRUM_TAPE_BLOCK_MESSAGE,
